--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="container mx-auto">
+    <header class=" bg-amber-100">
         <!-- navbar -->
         <!-- Banner -->
-        <div class="flex items-center mt-12 space-x-6">
+        <div class=" container mx-auto py-24 md:flex items-center mt-12 space-x-6">
             <div class="space-y-6">
                 <h1 class="text-7xl font-semibold uppercase"> <span class="text-amber-500">Be the Penguins</span> <br> of Winter</h1>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque, dolore!</p>
@@ -24,7 +24,7 @@
 
             </div>
             <div>
-                <img src="./images/model.png" alt="">
+                <img class="w-3/4 md:w-full" src="./images/model.png" alt="">
             </div>
         </div>
 
